see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Jan-2010 Mark Dexter
# During install, default to English if Joomla! language uses 3-letter ISO code (Jean-Marie Simonet).

07-Jan-2010 Andrew Eddie
 ^ Removed ability to call JFilterInput statically.
 # Fixed buggy DB error string in installation.

06-Jan-2010 Hannes Papenberg
# Fixed default parameters in install-SQL for components

05-Jan-2010 Mark Dexter
# Fix category parameter in content modules (Elin Waring)
# Fix URL's to remove spaces (Elin Waring)
# Fix grid.sort to work with images (Andrea Tarr)
# Remove hard-coding for admin images (Andrea Tarr)
# Accessibility fixes to rules.php and grid.php (Andrea Tarr)
^ Auto create linked contact when creating new user (Sam Moffatt)
# Fix limit on latest users module (Elin Waring)
# Add missing frontend modules to extensions table (Jonnathan S. Lima)
# Fix admin/com_template/style error messages (Andrea Tarr)
# Remove duplicate title attribute in toolbars (Andrea Tarr)
# Make toolbars consistent in ordering and labels when editing (Elin Waring)
# Replact &getTable with getTable where it was generating warnings because of arrays (Elin Waring)
# Change com_user to com_users in the extensions table (Elin Waring)
# Change weblinks config.xml to use fields (Elin Waring)
# Fix admin/com_modules to delete associated records in modules_menu when module is deleted (Andrea Tarr)
^ Step one of adding separate name fields to contact (Elin Waring)
# Fix Save2Copy to correctly checkin the original content (Elin Waring)
# Fix module menu assignments modal (Andrea Tarr)
# Remove extraneous javascript from com_modules modal layout (Andrea Tarr)